--- a/src/less/global.less
+++ b/src/less/global.less
@@ -1,16 +1,26 @@
 * {
   box-sizing: border-box;
+
+  &.flip {
+    transform: rotateY(180deg);
+    transition: transform 0.5s;
+  }
 }
 
 html {
   font-size: 62.5%;
 }
 
-html, body {
+html,
+body {
   font-family: 'Roboto', sans-serif;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   font-family: 'Indie Flower', cursive;
 }
 
